--- a/pages/sail-club/index.html
+++ b/pages/sail-club/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/outline.css">
+    <link rel="stylesheet" href="css/outline-settings.css">
     <title>Яхт-клуб Yacht Club</title>
 </head>
 <body>
     <header class="page-header">
-        <img src="img/logotype.svg" alt="Логотип" class="logo">
+        <img src="img/logotype.svg" alt="Логотип" class="logo" width="64" height="68">
         <nav class="menu-nav">
             <ul class="menu">
                 <li class="menu-item"><a href="#">Наш клуб</a></li>
@@ -19,14 +21,14 @@
                 <li class="menu-item"><a href="#">Контакты</a></li>
             </ul>
         </nav>
-        <a href="#" class="personal-account"><!--Добавить изображение так как это содержательная картинка--></a>
+        <a href="#" class="personal-account"><img src="img/" alt="" class="personal-account-img"></a>
     </header>
     <main>
         <section class="lead-section">
             <h1>Вместе под парусом</h1>
             <img class="main-photo" src="img/main photo 1.jpg" alt="Красивая яхта">
         </section>
-        <article class="service"> <!--Заменить на article-->
+        <article class="service service-right"> <!--Заменить на article-->
             
                 <p class="date-range">20 октября - 19 апреля</p>
                 <h2 class="service-title">Стань частью команды</h2>
@@ -34,7 +36,7 @@
             <p class="service-description">Если вы давно хотели попробовать себя в яхтинге – сейчас самое лучшее время! Мы набираем команду будущих шкиперов. За 6 вы станете настоящим капитаном и уже в следующем сезоне сможете самостоятельно выйти в море!</p>
             <img class="service-photo" src="img/photo 2.jpg" alt="Мужик смотрит в свое красивое будущее" height="262px">
         </article>
-        <article class="service">
+        <article class="service service-left">
             
                 <p class="date-range">16 июля - 23 июля</p>
                 <h2 class="service-title">Рожденные в воде</h2>
