add reference to sail club

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul>
                 <li class="portfolio-item">
                     <p class="portfolio-markup"><a href="/pages/sail-club/index.html" class="portfolio-link">Верстка</a></p>
-                    <p class="portoflio-reference"><a href="" class="portfolio-link">Референс</a></p>
+                    <p class="portoflio-reference"><a href="https://www.figma.com/file/l7M8QSgKn7bKy51peTCDPq/fe-start-02?node-id=0%3A1" class="portfolio-link">Референс</a></p>
                 </li>
                 <li class="portfolio-item">
                     <p class="portfolio-markup"><a href="pages/corgi/index.html" class="portfolio-link">Верстка</a></p>
