page header positioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -23,8 +23,10 @@
                 <li class="menu-item"><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <p class="phone-number"><a href="">+375 (44) 025-93-23</a></p>
-        <p class="work-time">c 10:00 go 19:00</p>
+        <div class="header-contacts-container">
+            <p class="phone-number"><a href="">+375 (44) 025-93-23</a></p>
+            <p class="work-time">c 10:00 go 19:00</p>
+        </div>
     </header>
     <main>
         <section class="hero-section">
