hero section positioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -30,45 +30,53 @@
     </header>
     <main>
         <section class="hero-section">
-            <h1>Корги - маленькие собаки с большим сердцем</h1>
-            <p class="offer">Найдите своего идеального 
-                корги в нашем питомнике</p>
-            <a href="" class="offer-button">Выбрать друга</a>
-            <figure class="hero-figure">
-                <img src="img/hero-corgi.png" alt="">
-                <svg viewBox="0 0 460 460" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="50%" cy="50%" r="106px" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
-                    <circle cx="50%" cy="50%" r="136px" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
-                    <circle cx="50%" cy="50%" r="166px" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
-                    <circle cx="50%" cy="50%" r="196px" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
-                    <circle cx="50%" cy="50%" r="226px" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
-                </svg>
-            </figure>
-            <ul class="corgi-characteristics">
-                <li class="characteristics-item">
-                    Интеллект
-                    <div class="characteristics-line">
-                        <div class="characteristics-color"></div>
-                    </div>
-                </li>
-                <li class="characteristics-item">
-                    Игривость
-                    <div class="characteristics-line">
-                        <div class="characteristics-color"></div>
-                    </div>
-                </li>
-                <li class="characteristics-item">
-                    Компактность
-                    <div class="characteristics-line">
-                        <div class="characteristics-color"></div>
-                    </div>
-                </li>
-            </ul>
-            <ul class="social">
-                <li class="social-item"><a href=""><img src="img/icons8-телеграм-250.png" alt="Telegram" class="social-icon"></a></li>
-                <li class="social-item"><a href=""><img src="img/icons8-instagram-250.png" alt="Instagram" class="social-icon"></a></li>
-                <li class="social-item"><a href=""><img src="img/icons8-whatsapp-250.png" alt="WhatsApp" class="social-icon"></a></li>
-            </ul>
+            <div class="hero-section-main-container">
+                <div class="hero-section-content-container">
+                    <h1 class="hero-section-header">Корги - маленькие собаки с большим сердцем</h1>
+                    <p class="offer">Найдите своего идеального 
+                        корги в нашем питомнике</p>
+                    <a href="" class="offer-button">Выбрать друга</a>
+                </div>
+                <div class="hero-section-visual-container">
+                    <figure class="hero-figure">
+                        <img src="img/hero-corgi.png" alt="">
+                        <svg viewBox="0 0 460 460" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="50%" cy="50%" r="106px" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
+                            <circle cx="50%" cy="50%" r="136px" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
+                            <circle cx="50%" cy="50%" r="166px" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
+                            <circle cx="50%" cy="50%" r="196px" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
+                            <circle cx="50%" cy="50%" r="226px" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
+                        </svg>
+                    </figure>
+                    <ul class="corgi-characteristics">
+                        <li class="characteristics-item">
+                            Интеллект
+                            <div class="characteristics-line">
+                                <div class="characteristics-color"></div>
+                            </div>
+                        </li>
+                        <li class="characteristics-item">
+                            Игривость
+                            <div class="characteristics-line">
+                                <div class="characteristics-color"></div>
+                            </div>
+                        </li>
+                        <li class="characteristics-item">
+                            Компактность
+                            <div class="characteristics-line">
+                                <div class="characteristics-color"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="hero-section-footer">
+                <ul class="social">
+                    <li class="social-item"><a href=""><img src="img/icons8-телеграм-250.png" alt="Telegram" class="social-icon"></a></li>
+                    <li class="social-item"><a href=""><img src="img/icons8-instagram-250.png" alt="Instagram" class="social-icon"></a></li>
+                    <li class="social-item"><a href=""><img src="img/icons8-whatsapp-250.png" alt="WhatsApp" class="social-icon"></a></li>
+                </ul>
+            </div>
         </section>
         <section class="about">
             <h2 class="section-header">О питомнике</h2>
