about block positioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -79,33 +79,35 @@
             </div>
         </section>
         <section class="about">
-            <h2 class="section-header">О питомнике</h2>
-            <p class="about-text">«Нарру раш» - это питомник корги,
-                где заботятся о маленьких собачках
-                и предлагают высококачественную
-                заботу для всех их питомцев. Питомник
-                предоставляет большой выбор корги,
-                их здоровье и благополучие являются
-                приоритетом для команды опытных
-                профессионалов.</p>
-            <a href="" class="section-button">Читать больше</a>
-            <figure class="about-figure">
-                <img src="img/pexels-antoni-shkraba-7524638.jpeg" alt="" class="about-image">
-                <svg viewBox="0 0 510 510" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="50%" cy="50%" r="230" fill="transparent" stroke="#4A6FFF" stroke-width="2"></circle>
-                    <circle cx="50%" cy="50%" r="254" fill="transparent" stroke="#4A6FFF" stroke-width="2"></circle>
-                </svg>
-                <figcaption class="about-caption">
-                    <p class="name">Марго</p>
-                    <p class="kind">Заводчик</p>
-                </figcaption>
-                <figcaption class="about-caption">
-                    <p class="name">Эдди</p>
-                    <p class="kind">Старший пёс</p>
-                </figcaption>
-
-                </figcaption>
-            </figure>
+            <div class="section-content-container">
+                <div class="text-container">
+                    <h2 class="section-header">О питомнике</h2>
+                    <p class="about-text">«Нарру paw» - это питомник корги,
+                        где заботятся о маленьких собачках
+                        и предлагают высококачественную
+                        заботу для всех их питомцев. Питомник
+                        предоставляет большой выбор корги,
+                        их здоровье и благополучие являются
+                        приоритетом для команды опытных
+                        профессионалов.</p>
+                    <a href="" class="section-button">Читать больше</a>
+                </div>
+                <figure class="about-figure">
+                    <img src="img/pexels-antoni-shkraba-7524638.jpeg" alt="" class="about-image">
+                    <svg viewBox="0 0 510 510" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="50%" cy="50%" r="230" fill="transparent" stroke="#4A6FFF" stroke-width="2"></circle>
+                        <circle cx="50%" cy="50%" r="254" fill="transparent" stroke="#4A6FFF" stroke-width="2"></circle>
+                    </svg>
+                    <figcaption class="about-caption about-caption-breeder">
+                        <p class="name">Марго</p>
+                        <p class="kind">Заводчик</p>
+                    </figcaption>
+                    <figcaption class="about-caption about-caption-dog">
+                        <p class="name">Эдди</p>
+                        <p class="kind">Старший пёс</p>
+                    </figcaption>
+                </figure>
+            </div>
            
         </section>
         <section class="care">
