care block positioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -112,53 +112,57 @@
         </section>
         <section class="care">
             <h2 class="section-header">Немного об уходе</h2>
-            <ul class="care-list">
-                <li class="care-item">
-                    <h3 class="care-heder">Питание</h3>
-                    <p class="care-description">Склонён к перееданию, которое
-                        может привести к ожирению
-                        и проблемам с конечностями.</p>
-                </li>
-                <li class="care-item">
-                    <h3 class="care-heder">Купание</h3>
-                    <p class="care-description">Купать нужно редко, их шерсть
-                        отталкивает грязь. Частые
-                        купания могут навредить.</p>
-                </li>
-                <li class="care-item">
-                    <h3 class="care-heder">Когти</h3>
-                    <p class="care-description">В норме стачиваются
-                        во время прогулок, но если
-                        вы заметили отросшие
-                        когти, подстригайте их.</p>
-                </li>
-                <li class="care-item">
-                    <h3 class="care-heder">Шерсть</h3>
-                    <p class="care-description">Повышенное выпадение
-                        шерсти, особенно в периоды
-                        линьки. Нуждается
-                        в регулярном вычесывании.</p>
-                </li>
-                <li class="care-item">
-                    <h3 class="care-heder">Уши</h3>
-                    <p class="care-description">Уши стоячие и в них легко
-                        попадает грязь и пыль. Ушки
-                        нужно постоянно чистить.</p>
-                </li>
-                <li class="care-item">
-                    <h3 class="care-heder">Глаза</h3>
-                    <p class="care-description">В глаза собаки также может
-                        попадать грязь. Протирать
-                        их нужно каждую неделю.</p>
-                </li>
-            </ul>
-            <figure class="care-figure">
-                <img src="img/corgi-care.png" alt="" class="corgi">
-                <svg viewBox="0 0 472 472" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="50%" cy="50%" r="185" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
-                    <circle cx="50%" cy="50%" r="236" fill="transparent" stroke="#4A6FFF" stroke-width="2"></circle>
-                </svg>
-            </figure>
+            <div class="care-content-container">
+                <ul class="care-list care-list-right-oriented">
+                    <li class="care-item">
+                        <h3 class="care-heder">Питание</h3>
+                        <p class="care-description">Склонён к перееданию, которое
+                            может привести к ожирению
+                            и проблемам с конечностями.</p>
+                    </li>
+                    <li class="care-item">
+                        <h3 class="care-heder">Купание</h3>
+                        <p class="care-description">Купать нужно редко, их шерсть
+                            отталкивает грязь. Частые
+                            купания могут навредить.</p>
+                    </li>
+                    <li class="care-item">
+                        <h3 class="care-heder">Когти</h3>
+                        <p class="care-description">В норме стачиваются
+                            во время прогулок, но если
+                            вы заметили отросшие
+                            когти, подстригайте их.</p>
+                    </li>
+                </ul>
+                <ul class="care-list care-list-left-oriented">
+                    <li class="care-item">
+                        <h3 class="care-heder">Шерсть</h3>
+                        <p class="care-description">Повышенное выпадение
+                            шерсти, особенно в периоды
+                            линьки. Нуждается
+                            в регулярном вычесывании.</p>
+                    </li>
+                    <li class="care-item">
+                        <h3 class="care-heder">Уши</h3>
+                        <p class="care-description">Уши стоячие и в них легко
+                            попадает грязь и пыль. Ушки
+                            нужно постоянно чистить.</p>
+                    </li>
+                    <li class="care-item">
+                        <h3 class="care-heder">Глаза</h3>
+                        <p class="care-description">В глаза собаки также может
+                            попадать грязь. Протирать
+                            их нужно каждую неделю.</p>
+                    </li>
+                </ul>
+                <figure class="care-figure">
+                    <img src="img/corgi-care.png" alt="" class="corgi">
+                    <svg viewBox="0 0 472 472" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="50%" cy="50%" r="185" fill="transparent" stroke="#4A6FFF" stroke-width="2" stroke-dasharray="42"></circle>
+                        <circle cx="50%" cy="50%" r="236" fill="transparent" stroke="#4A6FFF" stroke-width="2"></circle>
+                    </svg>
+                </figure>
+            </div>
            
         </section>
         <section class="puppets">
