pupets block positioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -167,46 +167,54 @@
         </section>
         <section class="puppets">
             <h2 class="section-header">Наши щенки</h2>
-            <ul class="filter">
-                <li class="filter-item selected">Все щенки</li>
-                <li class="filter-item">Девочки</li>
-                <li class="filter-item">Мальчики</li>
-            </ul>
-            <ul class="puppets-list">
-                <li class="puppet-item">
-                    <img src="img/puppy-1.png" alt="" class="puppet-image">
-                    <h3 class="puppet-name">Клео</h3>
-                    <p class="puppet-description">Самая активная и игривая
-                        малышка</p>
-                    <p class="sex-title param girl">Девочка</p>
-                    <p class="age-title param">2 месяца</p>
-                    <a href="" class="puppet-item-button">Взять себе</a>
-                </li>
-                <li class="puppet-item">
-                    <img src="img/puppy-2.png" alt="" class="puppet-image">
-                    <h3 class="puppet-name">Леонард</h3>
-                    <p class="puppet-description">Спокойный и очень
-                        любвеобильный щенок</p>
-                    <p class="sex-title param boy">Мальчик</p>
-                    <p class="age-title param">2 месяца</p>
-                    <a href="" class="puppet-item-button">Взять себе</a>
-                </li>
-                <li class="puppet-item">
-                    <img src="img/puppy-3.png" alt="" class="puppet-image">
-                    <h3 class="puppet-name">Пенни</h3>
-                    <p class="puppet-description">Очень любознательная
-                        и дружелюбная малышка</p>
-                    <p class="sex-title param girl">Девочка</p>
-                    <p class="age-title param">2 месяца</p>
-                    <a href="" class="puppet-item-button">Взять себе</a>
-                </li>
-            </ul>
-            <nav class="puppets-navigation">
-                <ul class="puppets-nav-list">
-                    <li class="backward"><a href=""><img src="img/icons8-вперед-100.png" alt=""></a></li>
-                    <li class="forward"><a href=""><img src="img/icons8-вперед-100.png" alt=""></a></li>
+            <div class="puppets-content-container">
+                <ul class="filter">
+                    <li class="filter-item selected">Все щенки</li>
+                    <li class="filter-item">Девочки</li>
+                    <li class="filter-item">Мальчики</li>
                 </ul>
-            </nav>
+                <ul class="puppets-list">
+                    <li class="puppet-item">
+                        <img src="img/puppy-1.png" alt="" class="puppet-image">
+                        <h3 class="puppet-name">Клео</h3>
+                        <p class="puppet-description">Самая активная и игривая
+                            малышка</p>
+                        <div class="puppet-item-params-container">
+                            <p class="sex-title param girl">Девочка</p>
+                            <p class="age-title param">2 месяца</p>
+                        </div>
+                        <a href="" class="puppet-item-button">Взять себе</a>
+                    </li>
+                    <li class="puppet-item">
+                        <img src="img/puppy-2.png" alt="" class="puppet-image">
+                        <h3 class="puppet-name">Леонард</h3>
+                        <p class="puppet-description">Спокойный и очень
+                            любвеобильный щенок</p>
+                        <div class="puppet-item-params-container">
+                            <p class="sex-title param boy">Мальчик</p>
+                            <p class="age-title param">2 месяца</p>
+                        </div>
+                        <a href="" class="puppet-item-button">Взять себе</a>
+                    </li>
+                    <li class="puppet-item">
+                        <img src="img/puppy-3.png" alt="" class="puppet-image">
+                        <h3 class="puppet-name">Пенни</h3>
+                        <p class="puppet-description">Очень любознательная
+                            и дружелюбная малышка</p>
+                        <div class="puppet-item-params-container">
+                            <p class="sex-title param girl">Девочка</p>
+                            <p class="age-title param">2 месяца</p>
+                        </div>
+                        <a href="" class="puppet-item-button">Взять себе</a>
+                    </li>
+                </ul>
+                <nav class="puppets-navigation">
+                    <ul class="puppets-nav-list">
+                        <li class="backward puppets-nav-item"><a href=""><img src="img/icons8-вперед-100.png" alt=""></a></li>
+                        <li class="forward puppets-nav-item"><a href=""><img src="img/icons8-вперед-100.png" alt=""></a></li>
+                    </ul>
+                </nav>
+            </div>
         </section>
         <section class="way-to-pay">
             <h2 class="section-header">Как приобрести щенка?</h2>
