way to pay final positioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -217,7 +217,7 @@
             </div>
         </section>
         <section class="way-to-pay">
-            <h2 class="section-header">Как приобрести щенка?</h2>
+            <h2 class="section-header section-header-left-aligned">Как приобрести щенка?</h2>
             <ol class="way-to-pay-list">
                 <li class="way-to-pay-item">Вы выбираете
                     понравившегося
