FAQ block positioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -241,33 +241,35 @@
         </section>
         <section class="FAQ">
             <h2 class="section-header">Частые вопросы</h2>
-            <dl class="questions">
-                <dt class="question opened">Какие документы предоставляют с щенком?</dt>
-                <dd class="question-answer">
-                    <p class="main-text">Щенки покидают питомник со следующим пакетом документов</p>
-                    <ul class="description-list">
-                        <li class="description-item">договор</li>
-                        <li class="description-item">родословная</li>
-                        <li class="description-item">ветпаспорт</li>
-                    </ul>
-                </dd>
-                <dt class="question">В какие города осуществляется доставка?</dt>
-                <dd class="question-answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ex.</dd>
-                <dt class="question">Можно ли приехать посмотреть на щенков?</dt>
-                <dd class="question-answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ex.</dd>
-                <dt class="question">Что нужно знать перед покупкой щенка?</dt>
-                <dd class="question-answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ex.</dd>
-                <dt class="question">Как подготовить дом к появлению щенка?</dt>
-                <dd class="question-answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ex.</dd>
-                <dt class="question">Чем лучше кормить щенка?</dt>
-                <dd class="question-answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ex.</dd>
-            </dl>
-            <figure class="question-figure">
-                <img src="img/corgi-stand.png" alt="" class="qustion-corgi" style="transform: scaleX(-1);">
-                <img src="img/question-2.svg" alt="" class="question-img">
-                <img src="img/question-1.svg" alt="" class="question-img">
-                <img src="img/question-2.svg" alt="" class="question-img">
-            </figure>
+            <div class="FAQ-content-container">
+                <dl class="questions">
+                    <dt class="question opened">Какие документы предоставляют с щенком?</dt>
+                    <dd class="question-answer">
+                        <p class="main-text">Щенки покидают питомник со следующим пакетом документов</p>
+                        <ul class="description-list">
+                            <li class="description-item">договор</li>
+                            <li class="description-item">родословная</li>
+                            <li class="description-item">ветпаспорт</li>
+                        </ul>
+                    </dd>
+                    <dt class="question">В какие города осуществляется доставка?</dt>
+                    <dd class="question-answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ex.</dd>
+                    <dt class="question">Можно ли приехать посмотреть на щенков?</dt>
+                    <dd class="question-answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ex.</dd>
+                    <dt class="question">Что нужно знать перед покупкой щенка?</dt>
+                    <dd class="question-answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ex.</dd>
+                    <dt class="question">Как подготовить дом к появлению щенка?</dt>
+                    <dd class="question-answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ex.</dd>
+                    <dt class="question">Чем лучше кормить щенка?</dt>
+                    <dd class="question-answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ex.</dd>
+                </dl>
+                <figure class="question-figure">
+                    <img src="img/corgi-stand.png" alt="" class="qustion-corgi" style="transform: scaleX(-1);">
+                    <img src="img/question-2.svg" alt="" class="question-img">
+                    <img src="img/question-1.svg" alt="" class="question-img">
+                    <img src="img/question-2.svg" alt="" class="question-img">
+                </figure>
+            </div>
         </section>
         <section class="stories">
             <h2 class="section-header">Счастливые истории</h2>
