stories block postioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -273,58 +273,72 @@
         </section>
         <section class="stories">
             <h2 class="section-header">Счастливые истории</h2>
-            <ul class="stories-list">
-                <li class="story-item">
-                    <figure class="story-figure">
-                        <img src="img/woman-1.jpeg" alt="" class="story-img">
-                        <svg viewBox="0 0 402 402" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="50%" cy="50%" r="200" fill="transparent" stroke="#FDA237" stroke-width="2" stroke-dasharray="42"></circle>
-                        </svg>
-                    </figure>
-                    <h3 class="customer-name">Алена, 28 лет</h3>
-                    <p class="story-date">05.04.2023</p>
-                    <p class="story-description">Я купила щенка в питомнике «Нарру Раш» и очень
-                        рада, что выбрала именно их. Опыт работы с этим
-                        питомником был превосходным. Все сотрудники
-                        были очень дружелюбными и заботливыми,
-                        они подробно рассказали мне об уходе за моим
-                        питомцем и ответили на все мои вопросы. Щенок
-                        был здоровым и весёлым, он был хорошо
-                        социализирован и уже умел делать многое из того,
-                        что мы от него ожидали. Я хочу искренне
-                        поблагодарить всех сотрудников питомника
-                        за хороший уход за собаками и отличную помощь,
-                        которую они они оказывают при выборе щенка.</p>
-                </li>
-                <li class="story-item">
-                    <figure class="story-figure">
-                        <img src="img/woman-2.jpg" alt="" class="story-img">
-                        <svg viewBox="0 0 402 402" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="50%" cy="50%" r="200" fill="transparent" stroke="#FDA237" stroke-width="2" stroke-dasharray="42"></circle>
-                        </svg>
-                    </figure>
-                    <h3 class="customer-name">Lorem.</h3>
-                    <p class="story-date">11.09.2001</p>
-                    <p class="story-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit distinctio commodi facere dolore labore, quisquam pariatur perspiciatis consequatur cupiditate. Dolorem?</p>
-                </li>
-                <li class="story-item">
-                    <figure class="story-figure">
-                        <img src="img/woman-3.jpg" alt="" class="story-img">
-                        <svg viewBox="0 0 402 402" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="50%" cy="50%" r="200" fill="transparent" stroke="#FDA237" stroke-width="2" stroke-dasharray="42"></circle>
-                        </svg>
-                    </figure>
-                    <h3 class="customer-name">Lorem.</h3>
-                    <p class="story-date">11.09.2001</p>
-                    <p class="story-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit distinctio commodi facere dolore labore, quisquam pariatur perspiciatis consequatur cupiditate. Dolorem?</p>
-                </li>
-            </ul>
-            <nav class="story-navigation">
-                <ul class="story-nav-list">
-                    <li class="backward"><a href=""><img src="img/icons8-вперед-100.png" alt=""></a></li>
-                    <li class="forward"><a href=""><img src="img/icons8-вперед-100.png" alt=""></a></li>
+            <div class="stories-content-container">
+                <ul class="stories-list">
+                    <li class="story-item story-item-opened">
+                        <figure class="story-figure">
+                            <img src="img/woman-1.jpeg" alt="" class="story-img">
+                            <svg viewBox="0 0 402 402" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="50%" cy="50%" r="200" fill="transparent" stroke="#FDA237" stroke-width="2" stroke-dasharray="42"></circle>
+                            </svg>
+                        </figure>
+                        <div class="story-item-content-container">
+                            <div class="story-item-content-header-container">
+                                <h3 class="customer-name">Алена, 28 лет</h3>
+                                <p class="story-date">05.04.2023</p>
+                            </div>
+                            <p class="story-description">Я купила щенка в питомнике «Нарру Раш» и очень
+                                рада, что выбрала именно их. Опыт работы с этим
+                                питомником был превосходным. Все сотрудники
+                                были очень дружелюбными и заботливыми,
+                                они подробно рассказали мне об уходе за моим
+                                питомцем и ответили на все мои вопросы. Щенок
+                                был здоровым и весёлым, он был хорошо
+                                социализирован и уже умел делать многое из того,
+                                что мы от него ожидали. Я хочу искренне
+                                поблагодарить всех сотрудников питомника
+                                за хороший уход за собаками и отличную помощь,
+                                которую они они оказывают при выборе щенка.</p>
+                        </div>
+                    </li>
+                    <li class="story-item">
+                        <figure class="story-figure">
+                            <img src="img/woman-2.jpg" alt="" class="story-img">
+                            <svg viewBox="0 0 402 402" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="50%" cy="50%" r="200" fill="transparent" stroke="#FDA237" stroke-width="2" stroke-dasharray="42"></circle>
+                            </svg>
+                        </figure>
+                        <div class="story-item-content-container">
+                            <div class="story-item-content-header-container">
+                                <h3 class="customer-name">Lorem.</h3>
+                                <p class="story-date">11.09.2001</p>
+                            </div>
+                            <p class="story-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit distinctio commodi facere dolore labore, quisquam pariatur perspiciatis consequatur cupiditate. Dolorem?</p>
+                        </div>
+                    </li>
+                    <li class="story-item">
+                        <figure class="story-figure">
+                            <img src="img/woman-3.jpg" alt="" class="story-img">
+                            <svg viewBox="0 0 402 402" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="50%" cy="50%" r="200" fill="transparent" stroke="#FDA237" stroke-width="2" stroke-dasharray="42"></circle>
+                            </svg>
+                        </figure>
+                        <div class="story-item-content-container">
+                            <div class="story-item-content-header-container">
+                                <h3 class="customer-name">Lorem.</h3>
+                                <p class="story-date">11.09.2001</p>
+                            </div>
+                            <p class="story-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit distinctio commodi facere dolore labore, quisquam pariatur perspiciatis consequatur cupiditate. Dolorem?</p>
+                        </div>
+                    </li>
                 </ul>
-            </nav>
+                <nav class="story-navigation">
+                    <ul class="story-nav-list">
+                        <li class="story-nav-backward backward story-nav-item"><a href=""><img src="img/icons8-вперед-100.png" alt=""></a></li>
+                        <li class="story-nav-forward forward story-nav-item"><a href=""><img src="img/icons8-вперед-100.png" alt=""></a></li>
+                    </ul>
+                </nav>
+            </div>
         </section>
         <section class="videos">
             <h2 class="section-header">Видео с нами</h2>
