corgi-world positioning

--- a/pages/corgi/index.html
+++ b/pages/corgi/index.html
@@ -360,24 +360,28 @@
         </section>
         <section class="corgi-world">
             <h2 class="section-header">Загляните в мир корги</h2>
-            <h3 class="small-header">Экскурсия в питомник</h3>
-            <ul class="excursion-list">
-                <li class="excursion-item">Вы можете выбрать щенка и забрать
-                    маленький комочек счастья себе домой</li>
-                <li class="excursion-item">Вы можете провести время со щенками
-                    и больше узнать о породе</li>
-                <li class="excursion-item">Вы увидите, что требуются, чтобы стать
-                    хорошим хозяином</li>
-                <li class="excursion-item">Если вы хотите провести время в компании
-                    весёлых и активных щенят</li>
-            </ul>
-            <a href="" class="more">Подробнее</a>
-            <figure class="excursion-figure">
-                <img src="img/corgi-excursion.jpeg" alt="" class="corgi-face">
-                <svg viewBox="0 0 522 522" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="50%" cy="50%" r="260" fill="transparent" stroke="#FDA237" stroke-width="2" stroke-dasharray="42"></circle>
-                </svg>
-            </figure>
+            <div class="corgi-world-content-container">
+                <div class="corgi-world-text-content-container">
+                    <h3 class="small-header">Экскурсия в питомник</h3>
+                    <ul class="excursion-list">
+                        <li class="excursion-item">Вы можете выбрать щенка и забрать
+                            маленький комочек счастья себе домой</li>
+                        <li class="excursion-item">Вы можете провести время со щенками
+                            и больше узнать о породе</li>
+                        <li class="excursion-item">Вы увидите, что требуются, чтобы стать
+                            хорошим хозяином</li>
+                        <li class="excursion-item">Если вы хотите провести время в компании
+                            весёлых и активных щенят</li>
+                    </ul>
+                    <a href="" class="more">Подробнее</a>
+                </div>
+                <figure class="excursion-figure">
+                    <img src="img/corgi-excursion.jpeg" alt="" class="corgi-face">
+                    <svg viewBox="0 0 522 522" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="50%" cy="50%" r="260" fill="transparent" stroke="#FDA237" stroke-width="2" stroke-dasharray="42"></circle>
+                    </svg>
+                </figure>
+            </div>
         </section>
         <section class="form">
             <h2 class="section-header">Остались вопросы?</h2>
